--- a/bonus/assets/master.css
+++ b/bonus/assets/master.css
@@ -3,24 +3,41 @@ html{
   justify-content:center;
 }
 body{
-  background-color: yellow;
-  font-family: cursive;
+  background-color: black;
+  font-family: arial;
 }
 h1{
-  color: red;
+  color: white;
 }
 p{
-  color: blue;
+  color: lightgrey;
+  margin-top: 40px;
   text-align: center;
 }
+
 .form{
   width:465px;
   border: 1px solid black;
-  background-color: blue;
+  background-color: lightgrey;
   margin-top: 100px;
   margin-left: 37px;
+  border-radius: 20px;
+  height: 300px;
 }
-.form input , p{
+.raccolta{
+  margin-left: 38px;
+  margin-top: 61px;
+}
+.form input {
   margin: 20px;
+  height: 20px;
+}
+button{
+  position: relative;
+  top: 4px;
+  left: 174px;
+  padding: 5px 5px;
+}
+.informazione{
   text-transform: uppercase;
 }
